# KGpaper

./: .coverage  .gitignore  README.md  config_sample.yaml  main.py  pyproject.toml  test-fraud-data.json  test.json  test.jsonld  test_from_pdf.json  test_multidata.json
.agent/Skills/serena-development/: SKILL.md
.agent/rules/: implementationplan.md
.agent/workflows/: implement-from-plan.md
.serena/: project.yml
.serena/memories/: development_process.md  fix_plan_notes_20260202.md  project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
prompts/: extraction_prompt.md  prompt.md  test_primpt.md  test_prompt.md  test_prompt_v1.md  test_prompt_v2.md
src/kgpaper/: config.py  graph_manager.py  llm_extractor.py  ontology.py  sparql_query.py  utils.py
tests/: debug_json_ld_type.py  test_config.py  test_graph_manager.py  test_llm_extractor.py  test_llm_extractor_pair.py  test_sparql_aggregation.py  test_sparql_filter.py  test_sparql_query.py
ui/: app.py
ui/pages/: 1_register.py  2_manage.py  3_explore.py
